package tienda;

public interface SeDescarga {

    void descargar();

}
