package tienda;

public interface SeEnvia {

    void enviar(String direccion);

}
