' Generated by UML Generator
' Encoded: jLPDZziW4BtpAv3sujKcKSyvhBRTL5MaRXirkLKzOCmwR6rm0KTgjzlVNZuDs6aZDUaD7ZFClCSmS2SL4gfl6o2_KjOXWLg86oJbQwK4BNj5rfYpBVr1u2kmfnM1c0hS402i5NoWEqfOXU0pWF3cMU-cA7w1BQAiGAAMIxZL-x3wyvVh9JnmMe4N02XJH3mYJE2Mh8Z4sj1jyAloCr4avgYKIY2iN6BmFIq5j-PNL9OiHD3p-TmaOTUBwpZ4lA8r3tOps0c2gPvNl2yRCeFqWEB4P21efmrOz4ZZs8rhejOQCraEqM-a1pDhJqClOzvgVScE5ytIaT2BMWgpHhxrg945Bv-My6FvHB3IQoNd3K7ChE-HtD_pYXJHHN4N8SbX9ErRTg1ULsA6egYeffvIIrJsvzbBYftJl1PznoVoEWkdhn-VBt0MAYZype0JYHsQEqIHZwkI5Cu6TQHn_5ZVRb1D6P91rAI0h5rIHMv-sLAQmL4AWVc70KuEN6Rus3DASEgiJwYqGKoXXZEdaHusQ583mSRfCypELwT50gCupQ87SNO6d9I5GtE7KuH7ZUKJxrpbNsLf3ApDkcDiHnTc6-Wz6712pw6vmmMEVAJ0Hl2gnyftrvoWGNAAjWD7acPwX6Oi6h-vBvemErV6eDkztMSYd8VpA8aksdDZ8nhFWOZnz72UJ-wvFg29cy6Id7E7LSn_accwTepdNy_o7zwGl2-kQ4trxHawuvllYkZMeg_rw6NrXabh3CX_Q8v95abljAYXuRFphT718w-eslHlySThuRuOy_dFs-5AU6onk7Lw0VzI7Z5oJunTSAO9kbXer3_DO6YrrjOq5M1xKBwdXJA_xC36SGBkFSB_2jpfRvh-v_q6
' URL: http://www.plantuml.com/plantuml/uml/jLPDZziW4BtpAv3sujKcKSyvhBRTL5MaRXirkLKzOCmwR6rm0KTgjzlVNZuDs6aZDUaD7ZFClCSmS2SL4gfl6o2_KjOXWLg86oJbQwK4BNj5rfYpBVr1u2kmfnM1c0hS402i5NoWEqfOXU0pWF3cMU-cA7w1BQAiGAAMIxZL-x3wyvVh9JnmMe4N02XJH3mYJE2Mh8Z4sj1jyAloCr4avgYKIY2iN6BmFIq5j-PNL9OiHD3p-TmaOTUBwpZ4lA8r3tOps0c2gPvNl2yRCeFqWEB4P21efmrOz4ZZs8rhejOQCraEqM-a1pDhJqClOzvgVScE5ytIaT2BMWgpHhxrg945Bv-My6FvHB3IQoNd3K7ChE-HtD_pYXJHHN4N8SbX9ErRTg1ULsA6egYeffvIIrJsvzbBYftJl1PznoVoEWkdhn-VBt0MAYZype0JYHsQEqIHZwkI5Cu6TQHn_5ZVRb1D6P91rAI0h5rIHMv-sLAQmL4AWVc70KuEN6Rus3DASEgiJwYqGKoXXZEdaHusQ583mSRfCypELwT50gCupQ87SNO6d9I5GtE7KuH7ZUKJxrpbNsLf3ApDkcDiHnTc6-Wz6712pw6vmmMEVAJ0Hl2gnyftrvoWGNAAjWD7acPwX6Oi6h-vBvemErV6eDkztMSYd8VpA8aksdDZ8nhFWOZnz72UJ-wvFg29cy6Id7E7LSn_accwTepdNy_o7zwGl2-kQ4trxHawuvllYkZMeg_rw6NrXabh3CX_Q8v95abljAYXuRFphT718w-eslHlySThuRuOy_dFs-5AU6onk7Lw0VzI7Z5oJunTSAO9kbXer3_DO6YrrjOq5M1xKBwdXJA_xC36SGBkFSB_2jpfRvh-v_q6
' Generated on: 2026-04-09T13:04:23.648271343

@startuml
skinparam classAttributeIconSize 0
hide circle

class MiTienda {
  +{static} main(args: String[]): void
}

interface SeDescarga {
  ~descargar(): void
}

abstract class Libro {
  #isbn: String
  --
  +Libro()
  +Libro(codigo: String, precio: double, iva: double, descripcion: String, isbn: String)
  +getIsbn(): String
  +setIsbn(isbn: String): void
  +compareTo(l: Libro): int
  +equals(obj: Object): boolean
  +hashCode(): int
  +toString(): String
}

interface SeEnvia {
  ~enviar(direccion: String): void
}

class Musica {
  -grupo: String
  --
  +Musica()
  +Musica(codigo: String, precio: double, iva: double, descripcion: String, grupo: String)
  +getGrupo(): String
  +setGrupo(grupo: String): void
  +toString(): String
}

class LibroPapel {
  -numPaginas: int
  --
  +LibroPapel()
  +LibroPapel(codigo: String, precio: double, iva: double, descripcion: String, isbn: String, numPaginas: int)
  +getNumPaginas(): int
  +setNumPaginas(numPaginas: int): void
  +enviar(direccion: String): void
  +toString(): String
}

class Pantalon {
  -talla: String
  --
  +Pantalon()
  +Pantalon(codigo: String, precio: double, iva: double, descripcion: String, marca: String, talla: String)
  +getTalla(): String
  +setTalla(talla: String): void
  +toString(): String
}

abstract class Ropa {
  #marca: String
  --
  +Ropa()
  +Ropa(codigo: String, precio: double, iva: double, descripcion: String, marca: String)
  +getMarca(): String
  +setMarca(marca: String): void
  +enviar(direccion: String): void
  +toString(): String
}

abstract class Producto {
  #codigo: String
  #precio: double
  #iva: double
  #descripcion: String
  --
  +Producto()
  +Producto(codigo: String, precio: double, iva: double, descripcion: String)
  +getCodigo(): String
  +setCodigo(codigo: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +getIva(): double
  +setIva(iva: double): void
  +getDescripcion(): String
  +setDescripcion(descripcion: String): void
  +toString(): String
  +equals(obj: Object): boolean
  +hashCode(): int
}

class LibroDigital {
  -numBytes: long
  --
  +LibroDigital()
  +LibroDigital(codigo: String, precio: double, iva: double, descripcion: String, isbn: String, numBytes: long)
  +getNumBytes(): long
  +setNumBytes(numBytes: long): void
  +descargar(): void
  +toString(): String
}

Libro --|> Producto
Libro ..> Libro
Musica --|> Producto
LibroPapel --|> Libro
LibroPapel ..|> SeEnvia
Pantalon --|> Ropa
Ropa --|> Producto
Ropa ..|> SeEnvia
LibroDigital --|> Libro
LibroDigital ..|> SeDescarga
@enduml